[package]
name = "lambda-file-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.14"
aws-credential-types = "1.2.1"
aws-sdk-s3 = "1.70.0"
dotenv = "0.15.0"
futures = "0.3.31"
lambda_http = "0.13.0"
multipart = "0.18.0"
serde_json = "1.0.137"
tokio = { version = "1", features = ["macros"] }
